--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,41 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-
-name: Generate Snake
-
-# Controls when the action will run. This action runs every 6 hours.
+name: Yılan Görseli Oluştur
 
 on:
   schedule:
-      # every 6 hours
+    # Her 6 saatte bir çalışır
     - cron: "0 */6 * * *"
-
-# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
-# The sequence of runs in this workflow:
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      # Depoyu kontrol eder, böylece iş akışı dosyalara erişebilir
       - uses: actions/checkout@v2
 
-    # Generates the snake  
+      # Yılan görselini oluşturur
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: range79
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      # Değişikliklerin durumunu gösterir, sorun gidermeyi kolaylaştırır
       - run: git status
 
-      # Push the changes
+      # Değişiklikleri `output` dalına (branch) gönderir
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+          branch: output
           force: true
 
+      # `dist` dizinindeki dosyaları GitHub Pages'e yükler
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
